--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
 before_script:
   - python -m CostumePy.launch_manager &
 script:
-  - python -m unittest discover -s tests
+  - python -m unittest discover -s tests -v
