--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - python setup.py install
 
 before_script:
-  - python -m CostumePy.launch_manager &
+  - python -m CostumePy.server &
 script:
   - python -m unittest discover -s tests -v
