--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,4 @@ before_script:
   - python -m CostumePy.server &
 script:
   - python -m unittest discover -s tests -v
+  - python -m unittest discover -s tests -v
