--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
+os:
+  - windows
+  - linux
 python:
   - "3.6"
 install:
   - python setup.py install
-
 before_script:
   - python -m CostumePy.server &
 script:
