--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,19 @@
 language: python
-os:
-  - windows
-  - linux
+
 python:
   - "3.6"
+
+matrix:
+  include:
+    - os: windows
+      language: sh
+      python: "3.8"
+      before_install:
+      - choco install python3
+      - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+      - python -m ensurepip --upgrade
+    - os: linux
+      python: "3.6"
 install:
   - python setup.py install
 before_script:
