--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,14 @@ language: python
 python:
   - "3.6"
 
+stages:
+  - Server_Connection_Test
+  - Main_Test_Suite
+  - Duplicate_Test_Suite
+
 matrix:
   include:
+
     - os: windows
       language: sh
       python: "3.8"
@@ -12,12 +18,20 @@ matrix:
       - choco install python3
       - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
       - python -m ensurepip --upgrade
+
     - os: linux
       python: "3.6"
+
+    - stage: Server_Connection_Test
+      script: python -m unittest tests/test_server_connection.py
+
+    - stage: Main_Test_Suite
+      script: python -m unittest discover -s tests -v
+
+    - stage: Duplicate_Test_Suite
+      script: python -m unittest discover -s tests -v
+
 install:
   - python setup.py install
 before_script:
   - python -m CostumePy.server &
-script:
-  - python -m unittest discover -s tests -v
-  - python -m unittest discover -s tests -v
