--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,5 @@
 language: python
 
-python:
-  - "3.6"
-
-stages:
-  - Server_Connection_Test
-  - Main_Test_Suite
-  - Duplicate_Test_Suite
-
 matrix:
   include:
 
@@ -22,14 +14,18 @@ matrix:
     - os: linux
       python: "3.6"
 
-    - stage: Server_Connection_Test
-      script: python -m unittest tests/test_server_connection.py
 
-    - stage: Main_Test_Suite
-      script: python -m unittest discover -s tests -v
+jobs:
+  include:
+  - stage: Server_Connection_Test
+    script: python -m unittest tests/test_server_connection.py
 
-    - stage: Duplicate_Test_Suite
-      script: python -m unittest discover -s tests -v
+  - stage: Main_Test_Suite
+    script: python -m unittest discover -s tests -v
+
+  - stage: Duplicate_Test_Suite
+    script: python -m unittest discover -s tests -v
+
 
 install:
   - python setup.py install
